welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: type mismatch;
 found   : Boolean(false)
 required: Int
var vuBiscuit:Int=false
                  ^Program:4: error: type mismatch;
 found   : Boolean(true)
 required: Int
	vuBiscuit = true
                    ^Program:5: error: type mismatch;
 found   : Boolean(false)
 required: Int
} else { vuBiscuit = false
                     ^Program:9: error: Int does not take parameters
if (vuBiscuit() == true) {
             ^